<resources>
    <string name="app_name">Our Menu</string>
    <string name="title_name">お母さん食堂</string>
    <string name="what_food">~今日は何を食べようかな~</string>
    <string name="home_text">ホーム</string>
    <string name="curry_text">カレー</string>
    <string name="curry_udon_text">カレーうどん</string>
    <string name="drycurry_text">ドライカレー</string>
    <string name="nabe_text">鍋</string>
    <string name="chanko_text">ちゃんこ鍋</string>
    <string name="nabeyakiudon_text">鍋焼きうどん</string>
    <string name="ramen_text">麺類</string>
    <string name="lemonramen_text">レモンラーメン</string>
    <string name="gekikararamen_text">激辛ラーメン</string>
    <string name="mailtext">メールする</string>
    <string name="smstext">SMSする</string>


    
    
    
    
    
    
    
    
</resources>
